<resources>
    <string name="app_name">UnSchedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="term_name">Nombre de periodo</string>
    <string name="term_start_date">Fecha inicio</string>
    <string name="term_end_date">Fecha fin</string>

    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="goback">Volver</string>

    <string name="subject_name">Nombre materia</string>

    <string name="day">Día</string>
    <string name="place">Ubicación</string>
    <string name="start_time">Hora inicio</string>
    <string name="end_time">Hora fin</string>

    <string name="term_initial_text">
        Bienvenido, por favor realice la configuración del periodo a trabajar
    </string>

    <string-array name="days">
        <item></item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>
</resources>
